--- a/templates/home/Add_patient.html
+++ b/templates/home/Add_patient.html
@@ -121,7 +121,7 @@
               </select>
    
         <label for="birthday">Date Of Discharge</label>
-  <input type="date" id="birthday" name="pdod" class="form-control" name="birthday">
+  <input type="date" id="birthday" name="pdod" class="form-control">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Patient Age</label>
           <input type="text" name="p_age" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
