--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -187,7 +187,7 @@ top: 1vh;    }
 
 
 {% load static %}
-<img id="bg" src="{% static "imgs/hh.jpg" %}" alt="home" />
+<!-- <img id="bg" src="{% static "imgs/hh.jpg" %}" alt="home" /> -->
 
 <div class="Heading">Welcome To Our Website</div>
 
