--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0/css/all.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    {% load static %}
+
+    <link rel="stylesheet" href="{% static 'base.css' %}">
   {% block links %} {% endblock links %}
 
   {% block Topjs %} {% endblock Topjs %}
@@ -245,6 +249,9 @@
     /* buttons */
 
 
+    /* buttons */
+
+
 
     .danger {
       padding: 20px;
@@ -384,7 +391,7 @@
 .bulleticon-mm{
     height: 23px;
     width: 26px;
-    margin: 12px 0 -6px 0px;
+    margin: 0 -6px 0px;
     display: inline-block;
 }
 .middlesection-mm{
@@ -533,6 +540,7 @@ display: flex;
     } 
     
     }
+  
     
 
 
@@ -581,8 +589,11 @@ display: flex;
             <button class="btn-hover color-3">{{user.first_name}}</button></a>
             {% else %}
             <button class="btn-hover color-3">{{user.username}}</button></a>
+            
 
             {% endif %}
+
+
 
 
 
@@ -590,7 +601,11 @@ display: flex;
 
           <div class="text-end">
 
-            <button type="button" class="btn-hover color-9"><a href="/login">login</a></button>
+            <a href="/login">
+              
+       <button class="custom-btn btn-3"><span>Login</span></button>
+            
+            </a>
           
 
           </div>
@@ -611,7 +626,39 @@ display: flex;
       <button class="btn-hover color-10">BUTTON</button>
       <button class="btn-hover color-11">BUTTON</button>
       <button class="btn-hover alr color-12">BUTTON</button> -->
+
+
+      <!-- buttons 3 *****************************-->
+      <header>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+     </header>
+     
+ 
+     <!-- <div class="frame">
+       <button class="custom-btn btn-1">Read More</button>
+       <button class="custom-btn btn-2">Read More</button>
+       <button class="custom-btn btn-3"><span>Read More</span></button>
+       <button class="custom-btn btn-4"><span>Read More</span></button>
+       <button class="custom-btn btn-5"><span>Read More</span></button>
+       <button class="custom-btn btn-6"><span>Read More</span></button>
+       <button class="custom-btn btn-7"><span>Read More</span></button>
+       <button class="custom-btn btn-8"><span>Read More</span></button>
+       <button class="custom-btn btn-9">Read More</button>
+       <button class="custom-btn btn-10">Read More</button>
+       <button class="custom-btn btn-11">Read More<div class="dot"></div></button>
+       <button class="custom-btn btn-12"><span>Click!</span><span>Read More</span></button>
+       <button class="custom-btn btn-13">Read More</button>
+       <button class="custom-btn btn-14">Read More</button>
+       <button class="custom-btn btn-15">Read More</button>
+       <button class="custom-btn btn-16">Read More</button>
+      
+     </div> -->
+     
+      <!-- ************************************ -->
     </div>
+
+
+
 
 
   </div>
