--- a/templates/blog/Addblog.html
+++ b/templates/blog/Addblog.html
@@ -43,6 +43,18 @@
   .inlin{
     display: inline-block
   }
+  #output {
+  padding: 20px;
+  background: #dadada;
+}
+
+form {
+  margin-top: 20px;
+}
+
+select {
+  width: 300px;
+}
    </style>
    {% endblock css %}
 
@@ -66,5 +78,6 @@
   </a>
 </form>
 </div>
+
 
  {% endblock %}
