--- a/templates/home/Add_H_admin.html
+++ b/templates/home/Add_H_admin.html
@@ -64,6 +64,11 @@
           <input type="text" name="hadd" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+          <input type="Number" name="phonenumber" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
         <div class="form-group">
           <label for="pass1">Choose a password</label>
           <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Choose Your Password"
