--- a/templates/home/profile.html
+++ b/templates/home/profile.html
@@ -1,319 +1,370 @@
 {% extends 'base.html' %}
 
 {% block title %}Profile{% endblock title %}
+
 {% block css %}
-<style>
-  
-          .cards-list {
-  z-index: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.card {
-  margin: 30px auto;
-  width: 300px;
-  height: 400px;
-  border-radius: 20px;
-box-shadow: 5px 5px 15px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-  cursor: pointer;
-  transition: 0.4s;
-  position: relative;
-          left: 4%;
-}
-
-.card .card_image {
-  width: inherit;
-  height: inherit;
-  border-radius: 40px;
-}
-
-.card .card_image img {
-  width: inherit;
-  height: 380px;
-  border-radius: 40px;
-  object-fit: cover;
-  filter: contrast(1.3);
-}
-
-.card .card_title {
-  text-align: center;
-  /* border-radius: 0px 0px 40px 40px; */
-  width: 100.7%;
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 30px;
-  margin-top: -80px;
-  margin-left: 0;
-  margin-right: 0;
-  /* color: black; */
-  background-color: rgb(2, 2, 72);
-  height: 40px;
-  position: relative;
-  top: 20px;
-}
-
-.card:hover {
-  transform: scale(1.05,1.05);
-  box-shadow: 5px 5px 20px 10px rgba(0,0,0,0.25), 
-    -5px -5px 20px 10px rgba(0,0,0,0.22);
-}
-
-.title-white {
-  color: white;
-}
-
-.title-black {
-  color: black;
-}
-
-@media all and (max-width: 500px) {
-  .card-list {
-    /* On small screens, we are no longer using row direction but column */
-    flex-direction: column;
-  }
-}
-
-
-  .b{
-    /* background-color: cyan; */
-    height: 63vh;
-    /* width: 80vw; */
-    /* min-width: 600px; */
-    max-width: 1400px;
-    margin: auto;
-position: relative;
-top: 11vh;
-display: grid;
-grid-template-columns: 1fr 2.5fr;
-
-  }
-#pphoto{
-/* background-color: rgb(255, 255, 255); */
-}
-#content{
-  background-color: rgb(255, 255, 255);
-  position: relative;
-  /* min-width: 500px; */
-  top: 5%;
-
-}
-#content:hover{
-}
-.hed{
-  width: 100%;
-  height: 15%;
-border-top-left-radius: 10px;
-border-top-right-radius: 10px;
-  background-color: rgb(8, 0, 64);
-  display: flex;
-  font-size: 2em;
-  color: white;
-  justify-content: center;
-  /* align-items: center; */
-
-}
-.hed p{
-  margin-top: 1%;
-}
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
-  /* background-color: #2196F3; */
-  padding: 3px;
-}
-.grid-item {
-  /* background-color: rgba(255, 255, 255, 0.8); */
-  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
-  box-shadow: rgba(0, 0, 0, 0.326) 0px 3px 3px;
-  padding: 20px;
-  font-size: 30px;
-  /* text-align: center; */
-}
-
-@media only screen and (max-width: 1432px) {
-        .card{
-          
-          transform: scale(0.9,0.9);
-        }
-        #content{
-          transform: scale(0.9,0.9);
-
-  
-
-}
-
-        
- 
-    }
-
-@media only screen and (max-width: 1154px) {
-
-
-
-
-}
-
-
-    .title{
-  font-family: 'Times New Roman', Times, serif;
-      font-weight: bold;
-      color: rgb(0, 6, 68);
-      text-decoration: underline;
-      display: inline-block;
-    }
-
-#foot{
-  width: 100vw;
-  height: 20vh;
-  /* background-color: lawngreen; */
-}
-
-@media only screen and (max-width: 992px) {
-
- .title, .entity{
-   font-size: 0.7em;
- }
-
-     
-  
-
-
-    }
-
-@media only screen and (max-width: 872px) {
-
-.b{
-  display: block;
-}
-.card {
-  margin: auto;
-  width: 200px;
-  height: 250px;
-  overflow: hidden;
-  border-radius: 20px;
-box-shadow: 5px 5px 15px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-  cursor: pointer;
-  transition: 0.4s;
-  transform: scale(0.9,0.9);
-  position: relative;
-    left: -6px;
-          top: -9vh;
-}
-
-.card .card_image img {
-  width: inherit;
-  height: 350px;
-  position: relative;
-    left: -6px;
-          top: -9vh;
-
-  
-  border-radius: 40px;
-  object-fit: cover;
-  filter: contrast(1.3);
-}
-
-
-#pphoto{
-  height: 30vh;
-}
-}
-@media only screen and (max-width: 658px) {
-
-  .grid-container {
-  display: grid;
-  grid-template-columns: auto;
-  /* background-color: #2196F3; */
-  padding: 3px;
-}
-.grid-item {
-  /* background-color: rgba(255, 255, 255, 0.8); */
-  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
-  box-shadow: rgba(0, 0, 0, 0.326) 0px 3px 3px;
-  padding: 20px;
-  font-size: 30px;
-  /* text-align: center; */
-}
-#content{
-  background-color: rgb(255, 255, 255);
-  position: relative;
-  /* min-width: 500px; */
-  top: -10%;
-
-}
-
-
-}
-
-.entity{
-  
-}
-
-
 </style>
 {% endblock css %}
+body{
+    margin-top:20px;
+    color: #1a202c;
+    text-align: left;
+    background-color: #e2e8f0;    
+}
+.main-body {
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
+}
 
 {% block body %}
-{% load static %}
-<div class="b">
-<div id="pphoto">
-  <div class="cards-list">
-  
-    <div class="card 1">
 
-      <div class="card_image">  <img src="{% static "imgs/hs.jpg" %}" alt="home" /> </div>
-      <div class="card_title title-white">
-        <p>Card Title</p>
-      </div>
+<div class="container">
+    <div class="main-body my-3">
+    
+         
+    
+          <div class="row gutters-sm">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <div class="d-flex flex-column align-items-center text-center">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                    <div class="mt-3">
+{% if gg == "T" %}
+
+                      <h4>{{fn}}</h4>
+
+{% else %}
+                      <h4> {{p1.N}} {{fn}} &nbsp; {{ln}}</h4>
+  {% endif %}
+
+
+
+                      <p class="text-secondary mb-1">Full Stack Developer</p>
+                      <p class="text-muted font-size-sm">Bay Area, San Francisco, CA</p>
+                
+                    </div>
+                  </div>
+                </div>
+              </div>
+             <div class="card mt-3">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe mr-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Website</h6>
+                    <span class="text-secondary">https://bootdey.com</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github mr-2 icon-inline"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>Github</h6>
+                    <span class="text-secondary">bootdey</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
+                    <span class="text-secondary">@bootdey</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                    <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
+                    <span class="text-secondary">bootdey</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                         <a href="/logout">
+
+                           <button class="custom-btn btn-7"><span>Logout</span></button>
+</a>
+
+                  </li>
+                </ul>
+              </div> 
+            </div>
+            <div class="col-md-8">
+              <div class="card mb-3">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Username</h6>
+                    </div>
+{% if gg == "T" %}
+                    
+                    <div class="col-sm-9 text-secondary">
+                      {{user}}
+                    </div>
+                    {% else %}
+                    <div class="col-sm-9 text-secondary">
+                      {{user}} 
+                    </div>
+{% endif %} 
+
+
+
+                    
+
+
+
+                  </div>
+                  <hr>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Email</h6>
+                    </div>
+{% if p1.G == "c" %}
+
+                    <div class="col-sm-9 text-secondary">
+                     {{p2.E}}
+                    </div>
+{% else  %}
+
+                    <div class="col-sm-9 text-secondary">
+                    {{p1.E}}
+                    </div>
+{% endif %}
+
+                  </div>
+                  <hr>
+
+
+              
+
+
+{% if p1.G == "h" %}
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Address</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                     {{p2.A}}
+                    </div>
+
+                  </div>
+                  <hr>
+                  
+{% endif %}
+
+{% if p1.G == "e" %}
+  <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Hospital</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                    {{p2.X}}
+                    </div>
+
+                  </div>
+                  <hr>
+
+                    <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Hospital Email</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                    {{p2.Y}}
+                    </div>
+
+                  </div>
+                  <hr>
+
+                    <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Hospital Address</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                    {{p2.Z}}
+                    </div>
+
+                  </div>
+                  <hr>
+
+{% endif %}
+
+
+{% if p1.G == "c" %}
+   <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Blood Group</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                   {{p1.B}}
+                    </div>
+
+                  </div>
+                  <hr>
+
+                     <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Date</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                   {{p1.D}}
+                    </div>
+
+                  </div>
+                  <hr>
+
+                     <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Age</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                    {{p1.N}}
+                    </div>
+
+
+                  </div>
+                  <hr>
+
+                     <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">Hospital</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                     {{p2.A}}
+                    </div>
+
+                  </div>
+                  <hr>
+
+                     <div class="row">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">For Any Concern Mail</h6>
+                    </div>
+
+                    <div class="col-sm-9 text-secondary">
+                    {{p2.Au}}
+                    </div>
+
+                  </div>
+                  <hr>
+
+{% endif %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+                 
+                </div>
+              </div>
+
+              <div class="row gutters-sm">
+                <div class="col-sm-6 mb-3">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i></h6>
+                      <small>Web Design</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Website Markup</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>One Page</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Mobile Template</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Backend API</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-6 mb-3">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i></h6>
+                      <small>Web Design</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Website Markup</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>One Page</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Mobile Template</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Backend API</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+
+            </div>
+          </div>
+
+        </div>
     </div>
-    </div>
-</div>
-<div id="content">
-  <div class="hed"><p>Profile</p></div>
-  <div class="grid-container">
-    <div class="grid-item"> <h3 class="title">Name </h3> <span>&#9755;</span> <span class="entity">hehehe</span> </div>
-    <div class="grid-item"> <h3 class="title">Name </h3> <span>&#9755;</span> <span class="entity">hehehe</span> </div>
-    <div class="grid-item"> <h3 class="title">Name </h3> <span>&#9755;</span> <span class="entity">hehehe</span> </div>  
-    <div class="grid-item"> <h3 class="title">Name </h3> <span>&#9755;</span> <span class="entity">hehehe</span> </div>
-    <div class="grid-item"> <h3 class="title">Name </h3> <span>&#9755;</span> <span class="entity">hehehe</span> </div>
-    <div class="grid-item"> <h3 class="title">Name </h3> <span>&#9755;</span> <span class="entity">hehehe</span> </div>  
-    <div class="grid-item"> <h3 class="title">Name </h3> <span>&#9755;</span> <span class="entity">hehehe</span> </div>
-    <div class="grid-item"> <h3 class="title">Name </h3> <span>&#9755;</span> <span class="entity">hehehe</span> </div>
-  </div>
 
-</div>
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- {% endblock %}
+{% endblock %}
